# Automation-Companion

./: .gitattributes  ACTIONS_QUICK_REFERENCE.md  ARCHITECTURE_REFACTORING.md  BEFORE_AFTER_COMPARISON.md  README.md  REFACTORING_COMPLETION_REPORT.md  settings.gradle.kts  ui_design.pen
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/autonion/automationcompanion/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/automationcompanion/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vision_engine.cpp  vision_engine.h
app/src/main/java/com/autonion/automationcompanion/: AccessibilityRouter.kt  MainActivity.kt
app/src/main/java/com/example/automationcompanion/: MainActivity.kt
app/src/main/opencv/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
app/src/main/opencv/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake
app/src/main/res/drawable/: btn_overlay_transparent_ripple.xml  ic_camera.xml  ic_drag_handle_rounded.xml  ic_error.xml  ic_pause.xml  ic_stat_action.xml  ic_stat_loop.xml  ic_success.xml  ic_view_compact.xml  ic_view_full.xml  ripple_transparent.xml  rounded_panel_dark.xml
app/src/main/res/layout/: action_confirmation_view.xml  overlay_view.xml  spinner_selected_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+216 files in other folders)
